What's new in thtk 3:

thecl: Double quotes in ECL files are now escaped.